--- a/spark-bytes-team-10/package.json
+++ b/spark-bytes-team-10/package.json
@@ -16,13 +16,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
-    "next": "latest",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^4.5.0",
     "tailwind-merge": "^3.3.0"
-    ,
-    "react-easy-crop": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
